Added files for highlighing of markup
Added styles for the highlighting of markup. This includes new colors
and the files to select colors for each syntax element.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,33 @@
 // These colors are specific to the theme. Do not use in a package!
+@pubster-color-comment          : #767676;
+@pubster-color-constant         : #34A2D9;
+@pubster-color-entity           : #FFFFFF;
+@pubster-color-function         : #FFCC33;
+@pubster-color-header           : #3366FF;
+@pubster-color-keyword          : #CC6633;
+@pubster-color-markup-text      : #E6E1DC;
+@pubster-color-numeric          : #32CD32;
+@pubster-color-other-constant   : #CC3333;
+@pubster-color-string           : #99CC33;
+@pubster-color-support-function : #DA4939;
+@pubster-color-support-type     : #6E9CBE;
+@pubster-color-variable         : #3399CC;
 
+@_blue        : @pubster-color-variable;
+@_bright-blue : @pubster-color-header;
+@_bright-red  : @pubster-color-other-constant;
+@_gray        : @pubster-color-comment;
+@_green       : @pubster-color-numeric;
+@_light-blue  : @pubster-color-constant;
+@_light-green : @pubster-color-string;
+@_orange      : @pubster-color-keyword;
+@_orangered   : @pubster-color-support-function;
+@_pastel-blue : @pubster-color-support-type;
+@_yellow      : @pubster-color-function;
+
+@_neutral: mix(@syntax-text-color, @syntax-background-color);
+
+// These colors are specific to the theme. Do not use in a package!
 @very-light-gray:   #EEFFFF;
 @light-gray:        #B2CCD6;
 @gray:              #373b41;
