--- a/index.less
+++ b/index.less
@@ -10,3 +10,5 @@
 @import (less) "styles/languages/php";
 @import (less) "styles/languages/python";
 @import (less) "styles/languages/ruby";
+@import (less) "styles/languages/markdown";
+@import (less) "styles/languages/markup";
