Added support for Pug files
Simple support for Pug files based on [Calmity](https://github.com/Pustur/calamity-atom)

--- a/index.less
+++ b/index.less
@@ -12,3 +12,4 @@
 @import (less) "styles/languages/ruby";
 @import (less) "styles/languages/markdown";
 @import (less) "styles/languages/markup";
+@import (less) "styles/languages/pug";
